	The check_http -S/--ssl option now accepts the arguments "1.1" and "1.2"
	  to force TLSv1.1 and TLSv1.2 connections, respectively
	The check_http -S/--ssl option now allows for specifying the desired
	  protocol with a "+" suffix to also accept newer versions
	check_users: add support for range thresholds (John C. Frickson)

	FIXES
	Let check_real terminate lines with CRLF when talking to the server, as
	  mandated by 2326
	Fix check_procs on HP-UX
	check_smtp's -e/--expect option can now be combined with -S/--starttls
	Fix incorrect performance data thresholds emitted by check_ups

	WARNINGS
	The format of the performance data emitted by check_mrtgtraf has been
	  changed to comply with the development guidelines
	check_ssh now returns CRITICAL for protocol/version errors
	If a plugin is invoked with -h/--help or -V/--version, the exit status
	  is now UNKNOWN
	The superseded check_ntp.pl was removed, please use check_ntp_peer or
	  check_ntp_time instead

2.1.2 16th October 2015
	FIXES
	Fix incorrect performance data thresholds emitted by check_ups
	Fix check_dhcp's option parsing to not crash with certain arguments
	Fix check_snmp using correct timeout

2.1.1 2nd December 2014
	FIXES
	Fix check_ntp's jitter checking
	Fix check_ntp's handling of invalid server responses
	Fix check_apt's handling of invalid regular expressions
	Fix check_real's server response processing
	Fix backslash escaping in check_tcp's --help output
	Fix check_procs's unclosed filehandle in pst3 on Solaris

2.1 15th October 2014
	ENHANCEMENTS
	New check_hpjd -p option for port specification (abrist)
	New ./configure --with-qmail-qstat-command option to specify the path to
	  qmail-qstat(8)
	New check_ifstatus -n option to ignore interfaces by name
	check_ntp_peer has now specific state output for each metric
	New check_mysql -n option to ignore authentication failures
	Added IP and port or socket name to error messages
	New check_ntp_time -o option to add expected offset